--- a/App/Voltflow/Views/Account/SignInForm.axaml
+++ b/App/Voltflow/Views/Account/SignInForm.axaml
@@ -1,5 +1,5 @@
 <UserControl
-    x:Class="Voltflow.Views.Forms.SignInForm"
+    x:Class="Voltflow.Views.Account.SignInForm"
     xmlns="https://github.com/avaloniaui"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
@@ -11,7 +11,7 @@
     d:DesignWidth="800"
     mc:Ignorable="d">
     <Design.DataContext>
-        <viewModels:AuthViewModel />
+        <viewModels:AccountViewModel />
     </Design.DataContext>
 
     <UserControl.Resources>
