--- a/App/Voltflow/Views/AccountView.axaml
+++ b/App/Voltflow/Views/AccountView.axaml
@@ -1,17 +1,16 @@
 <UserControl
-    x:Class="Voltflow.Views.AuthView"
+    x:Class="Voltflow.Views.AccountView"
     xmlns="https://github.com/avaloniaui"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+    xmlns:account="clr-namespace:Voltflow.Views.Account"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-    xmlns:forms="clr-namespace:Voltflow.Views.Forms"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-    xmlns:u="https://irihi.tech/ursa"
     xmlns:viewModels="clr-namespace:Voltflow.ViewModels"
     d:DesignHeight="450"
     d:DesignWidth="800"
     mc:Ignorable="d">
     <Design.DataContext>
-        <viewModels:AuthViewModel />
+        <viewModels:AccountViewModel />
     </Design.DataContext>
 
     <StackPanel
@@ -21,12 +20,13 @@
         Classes="no-spacing">
         <!--
             Store all forms here (I split them into each file so the code here looks *clean*).
-            Each form knows when to display because of AuthTypeConverter and set AuthType in AuthViewModel.
+            Each form knows when to display because of AuthTypeConverter and set CurrentAuthType in AccountViewModel.
         -->
-        <forms:SignUpForm />
-        <forms:SignInForm />
-        <forms:TwoFactorAuthForm />
-        <forms:PasswordResetForm />
-        <forms:EmailVerificationForm />
+        <account:SignUpForm />
+        <account:SignInForm />
+        <account:TwoFactorAuthForm />
+        <account:PasswordResetForm />
+        <account:EmailVerificationForm />
+        <account:AccountPanel />
     </StackPanel>
 </UserControl>
