Improve UI in main (map) page

--- a/App/Voltflow/App.axaml
+++ b/App/Voltflow/App.axaml
@@ -23,6 +23,7 @@
 
         <!--  Include styles (even for Icons from IconPacks.Avalonia)  -->
         <StyleInclude Source="avares://IconPacks.Avalonia/Icons.axaml" />
+        <StyleInclude Source="/Styles/BorderStyle.axaml" />
         <StyleInclude Source="/Styles/ButtonStyle.axaml" />
         <StyleInclude Source="/Styles/IconStyle.axaml" />
         <StyleInclude Source="/Styles/SeparatorStyle.axaml" />
