--- a/App/Voltflow/Views/Account/SignUpForm.axaml
+++ b/App/Voltflow/Views/Account/SignUpForm.axaml
@@ -2,6 +2,7 @@
     x:Class="Voltflow.Views.Account.SignUpForm"
     xmlns="https://github.com/avaloniaui"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+    xmlns:controls="clr-namespace:Voltflow.Controls"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:iconPacks="https://github.com/MahApps/IconPacks.Avalonia"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
@@ -125,7 +126,7 @@
                 VerticalAlignment="Center"
                 Classes="color-gray"
                 Text="+48" />
-            <TextBox
+            <controls:NumberBox
                 Grid.Column="2"
                 MaxLength="9"
                 Text="{Binding SignUpForm.PhoneNumber}"
