--- a/App/Voltflow/Views/Account/TwoFactorAuthForm.axaml
+++ b/App/Voltflow/Views/Account/TwoFactorAuthForm.axaml
@@ -2,6 +2,7 @@
     x:Class="Voltflow.Views.Account.TwoFactorAuthForm"
     xmlns="https://github.com/avaloniaui"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+    xmlns:controls="clr-namespace:Voltflow.Controls"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:iconPacks="https://github.com/MahApps/IconPacks.Avalonia"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
@@ -30,7 +31,7 @@
                 Kind="KeyFill" />
             <TextBlock Classes="size-sm color-gray weight-bold" Text="2FA Code" />
         </StackPanel>
-        <TextBox
+        <controls:NumberBox
             MaxLength="6"
             Text="{Binding TwoFactorAuthForm.Token}"
             Watermark="123456" />
