--- a/App/Voltflow/Views/MapView.axaml
+++ b/App/Voltflow/Views/MapView.axaml
@@ -2,6 +2,7 @@
     x:Class="Voltflow.Views.MapView"
     xmlns="https://github.com/avaloniaui"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+    xmlns:controls="clr-namespace:Voltflow.Controls"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:iconPacks="https://github.com/MahApps/IconPacks.Avalonia"
     xmlns:mapsui="clr-namespace:Mapsui.UI.Avalonia;assembly=Mapsui.UI.Avalonia"
@@ -41,18 +42,18 @@
                     <Separator />
 
                     <TextBlock Classes="size-sm color-gray weight-bold" Text="Longitude" />
-                    <TextBox Text="{Binding Longitude}" />
+                    <controls:NumberBox AllowFloats="True" Text="{Binding Longitude}" />
 
                     <TextBlock Classes="size-sm color-gray weight-bold" Text="Latitude" />
-                    <TextBox Text="{Binding Latitude}" />
+                    <controls:NumberBox AllowFloats="True" Text="{Binding Latitude}" />
 
                     <Separator />
 
                     <TextBlock Classes="size-sm color-gray weight-bold" Text="Cost" />
-                    <TextBox Text="{Binding Cost}" />
+                    <controls:NumberBox Text="{Binding Cost}" />
 
                     <TextBlock Classes="size-sm color-gray weight-bold" Text="Maximum Charging Rate" />
-                    <TextBox Text="{Binding MaxChargeRate}" Watermark="MaxChargeRate" />
+                    <controls:NumberBox Text="{Binding MaxChargeRate}" Watermark="MaxChargeRate" />
 
                     <Separator />
 
