--- a/App/Voltflow/Views/Account/Panels/PasswordResetPanel.axaml
+++ b/App/Voltflow/Views/Account/Panels/PasswordResetPanel.axaml
@@ -1,17 +1,17 @@
 <UserControl
-    x:Class="Voltflow.Views.Account.PasswordResetForm"
+    x:Class="Voltflow.Views.Account.Panels.PasswordResetForm"
     xmlns="https://github.com/avaloniaui"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:iconPacks="https://github.com/MahApps/IconPacks.Avalonia"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     xmlns:models="clr-namespace:Voltflow.Models"
-    xmlns:viewModels="clr-namespace:Voltflow.ViewModels"
+    xmlns:viewModelsAccount="clr-namespace:Voltflow.ViewModels.Account"
     d:DesignHeight="450"
     d:DesignWidth="800"
     mc:Ignorable="d">
     <Design.DataContext>
-        <viewModels:AccountViewModel />
+        <viewModelsAccount:AccountViewModel />
     </Design.DataContext>
 
     <UserControl.Resources>
