--- a/App/Voltflow/Views/Account/AccountView.axaml
+++ b/App/Voltflow/Views/Account/AccountView.axaml
@@ -1,16 +1,16 @@
 <UserControl
-    x:Class="Voltflow.Views.AccountView"
+    x:Class="Voltflow.Views.Account.AccountView"
     xmlns="https://github.com/avaloniaui"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-    xmlns:account="clr-namespace:Voltflow.Views.Account"
+    xmlns:accountPages="clr-namespace:Voltflow.Views.Account.Panels"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-    xmlns:viewModels="clr-namespace:Voltflow.ViewModels"
+    xmlns:viewModelsAccount="clr-namespace:Voltflow.ViewModels.Account"
     d:DesignHeight="450"
     d:DesignWidth="800"
     mc:Ignorable="d">
     <Design.DataContext>
-        <viewModels:AccountViewModel />
+        <viewModelsAccount:AccountViewModel />
     </Design.DataContext>
 
     <StackPanel
@@ -22,11 +22,11 @@
             Store all forms here (I split them into each file so the code here looks *clean*).
             Each form knows when to display because of AuthTypeConverter and set CurrentAuthType in AccountViewModel.
         -->
-        <account:SignUpForm />
-        <account:SignInForm />
-        <account:TwoFactorAuthForm />
-        <account:PasswordResetForm />
-        <account:EmailVerificationForm />
-        <account:AccountPanel />
+		<accountPages:SignUpForm />
+		<accountPages:SignInForm />
+		<accountPages:TwoFactorAuthForm />
+		<accountPages:PasswordResetForm />
+		<accountPages:EmailVerificationForm />
+		<accountPages:AccountPanel />
     </StackPanel>
 </UserControl>
