--- a/App/Voltflow/Views/Account/Panels/TwoFactorAuthPanel.axaml
+++ b/App/Voltflow/Views/Account/Panels/TwoFactorAuthPanel.axaml
@@ -1,5 +1,5 @@
 <UserControl
-    x:Class="Voltflow.Views.Account.TwoFactorAuthForm"
+    x:Class="Voltflow.Views.Account.Panels.TwoFactorAuthForm"
     xmlns="https://github.com/avaloniaui"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:controls="clr-namespace:Voltflow.Controls"
@@ -7,12 +7,12 @@
     xmlns:iconPacks="https://github.com/MahApps/IconPacks.Avalonia"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     xmlns:models="clr-namespace:Voltflow.Models"
-    xmlns:viewModels="clr-namespace:Voltflow.ViewModels"
+    xmlns:viewModelsAccount="clr-namespace:Voltflow.ViewModels.Account"
     d:DesignHeight="450"
     d:DesignWidth="800"
     mc:Ignorable="d">
     <Design.DataContext>
-        <viewModels:AccountViewModel />
+        <viewModelsAccount:AccountViewModel />
     </Design.DataContext>
 
     <UserControl.Resources>
