--- a/App/Voltflow/Views/Pages/Map/MapView.axaml
+++ b/App/Voltflow/Views/Pages/Map/MapView.axaml
@@ -1,5 +1,5 @@
 <UserControl
-    x:Class="Voltflow.Views.MapView"
+    x:Class="Voltflow.Views.Pages.Map.MapView"
     xmlns="https://github.com/avaloniaui"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:controls="clr-namespace:Voltflow.Controls"
@@ -8,12 +8,12 @@
     xmlns:mapsui="clr-namespace:Mapsui.UI.Avalonia;assembly=Mapsui.UI.Avalonia"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     xmlns:models="clr-namespace:Voltflow.Models"
-    xmlns:viewModels="clr-namespace:Voltflow.ViewModels"
+    xmlns:viewModelsMap="clr-namespace:Voltflow.ViewModels.Pages.Map"
     d:DesignHeight="450"
     d:DesignWidth="800"
     mc:Ignorable="d">
     <Design.DataContext>
-        <viewModels:MapViewModel />
+        <viewModelsMap:MapViewModel />
     </Design.DataContext>
 
     <UserControl.Resources>
