--- a/App/Voltflow/Views/Pages/Map/MapView.axaml
+++ b/App/Voltflow/Views/Pages/Map/MapView.axaml
@@ -2,16 +2,20 @@
     x:Class="Voltflow.Views.Pages.Map.MapView"
     xmlns="https://github.com/avaloniaui"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-    xmlns:controls="clr-namespace:Voltflow.Controls"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-    xmlns:iconPacks="https://github.com/MahApps/IconPacks.Avalonia"
-    xmlns:mapsui="clr-namespace:Mapsui.UI.Avalonia;assembly=Mapsui.UI.Avalonia"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+    xmlns:mapsui="clr-namespace:Mapsui.UI.Avalonia;assembly=Mapsui.UI.Avalonia"
     xmlns:models="clr-namespace:Voltflow.Models"
+    xmlns:controls="clr-namespace:Voltflow.Controls"
+    xmlns:iconPacks="https://github.com/MahApps/IconPacks.Avalonia"
+	xmlns:reactiveUi="http://reactiveui.net"
+	xmlns:viewLocators="clr-namespace:Voltflow.ViewLocators"
     xmlns:viewModelsMap="clr-namespace:Voltflow.ViewModels.Pages.Map"
+	
     d:DesignHeight="450"
     d:DesignWidth="800"
     mc:Ignorable="d">
+	
     <Design.DataContext>
         <viewModelsMap:MapViewModel />
     </Design.DataContext>
@@ -33,60 +37,11 @@
                 Padding="10"
                 Classes="with-bg"
                 CornerRadius="10">
-                <StackPanel VerticalAlignment="Top">
-                    <TextBlock
-                        HorizontalAlignment="Center"
-                        Classes="size-l color-gray weight-bold"
-                        Text="{Binding Mode}" />
-
-                    <Separator />
-
-                    <TextBlock Classes="size-sm color-gray weight-bold" Text="Longitude" />
-                    <controls:NumberBox AllowFloats="True" Text="{Binding Longitude}" />
-
-                    <TextBlock Classes="size-sm color-gray weight-bold" Text="Latitude" />
-                    <controls:NumberBox AllowFloats="True" Text="{Binding Latitude}" />
-
-                    <Separator />
-
-                    <TextBlock Classes="size-sm color-gray weight-bold" Text="Cost" />
-                    <controls:NumberBox Text="{Binding Cost}" />
-
-                    <TextBlock Classes="size-sm color-gray weight-bold" Text="Maximum Charging Rate" />
-                    <controls:NumberBox Text="{Binding MaxChargeRate}" Watermark="MaxChargeRate" />
-
-                    <Separator />
-
-                    <Button
-                        HorizontalAlignment="Stretch"
-                        Classes="Success"
-                        Command="{Binding CreateStation}">
-                        <StackPanel Orientation="Horizontal">
-                            <iconPacks:PackIconBootstrapIcons VerticalAlignment="Center" Kind="PlusCircleFill" />
-                            <TextBlock VerticalAlignment="Center" Text="Add Station" />
-                        </StackPanel>
-                    </Button>
-
-                    <Button
-                        HorizontalAlignment="Stretch"
-                        Classes="Warning"
-                        Command="{Binding UpdateStation}">
-                        <StackPanel Orientation="Horizontal">
-                            <iconPacks:PackIconBootstrapIcons VerticalAlignment="Center" Kind="CloudUploadFill" />
-                            <TextBlock VerticalAlignment="Center" Text="Update Station" />
-                        </StackPanel>
-                    </Button>
-
-                    <Button
-                        HorizontalAlignment="Stretch"
-                        Classes="Danger"
-                        Command="{Binding DeleteStation}">
-                        <StackPanel Orientation="Horizontal">
-                            <iconPacks:PackIconBootstrapIcons VerticalAlignment="Center" Kind="Trash3Fill" />
-                            <TextBlock VerticalAlignment="Center" Text="Delete Station" />
-                        </StackPanel>
-                    </Button>
-                </StackPanel>
+				<reactiveUi:RoutedViewHost Router="{Binding Router}">
+					<reactiveUi:RoutedViewHost.ViewLocator>
+						<viewLocators:ReactiveViewLocator />
+					</reactiveUi:RoutedViewHost.ViewLocator>
+				</reactiveUi:RoutedViewHost>
             </Border>
         </Panel>
     </Panel>
