--- a/App/Voltflow/Views/Pages/Map/SidePanels/ManageStationView.axaml
+++ b/App/Voltflow/Views/Pages/Map/SidePanels/ManageStationView.axaml
@@ -10,7 +10,7 @@
 		<TextBlock
 			HorizontalAlignment="Center"
 			Classes="size-l color-gray weight-bold"
-			Text="{Binding Mode}" />
+			Text="{Binding ViewTitle}" />
 
 		<Separator />
 
@@ -59,5 +59,10 @@
 				<TextBlock VerticalAlignment="Center" Text="Delete Station" />
 			</StackPanel>
 		</Button>
+
+		<Separator />
+		
+		<CheckBox IsChecked="{Binding IsOutOfService}" Content="Out of service"/>
+		<CheckBox IsChecked="{Binding IsInServiceMode}" IsEnabled="{Binding IsOutOfService}" Content="Service mode"/>
 	</StackPanel>
 </UserControl>
