--- a/App/Voltflow/Styles/ButtonStyle.axaml
+++ b/App/Voltflow/Styles/ButtonStyle.axaml
@@ -4,20 +4,24 @@
             <ResourceDictionary.ThemeDictionaries>
                 <!--  Light Theme  -->
                 <ResourceDictionary x:Key="Light">
-                    <SolidColorBrush x:Key="Foreground" Color="Black" />
-                    <SolidColorBrush x:Key="BackgroundDisabled" Color=" #fafbfa" />
-                    <SolidColorBrush x:Key="BackgroundGreen" Color="#009600" />
-                    <SolidColorBrush x:Key="BackgroundGreenHover" Color="Green" />
-                    <SolidColorBrush x:Key="BackgroundGreenDisabled" Color="#4ca14c" />
+                    <SolidColorBrush x:Key="ButtonForeground" Color="Black" />
+                    <SolidColorBrush x:Key="ButtonBackground" Color="#f5f4f7" />
+                    <SolidColorBrush x:Key="ButtonBackgroundHover" Color="#ededee" />
+                    <SolidColorBrush x:Key="ButtonBackgroundDisabled" Color=" #fafbfa" />
+                    <SolidColorBrush x:Key="ButtonBackgroundGreen" Color="#009600" />
+                    <SolidColorBrush x:Key="ButtonBackgroundGreenHover" Color="Green" />
+                    <SolidColorBrush x:Key="ButtonBackgroundGreenDisabled" Color="#4ca14c" />
                 </ResourceDictionary>
 
                 <!--  Dark Theme  -->
                 <ResourceDictionary x:Key="Dark">
-                    <SolidColorBrush x:Key="Foreground" Color="White" />
-                    <SolidColorBrush x:Key="BackgroundDisabled" Color="#1f1e23" />
-                    <SolidColorBrush x:Key="BackgroundGreen" Color="Green" />
-                    <SolidColorBrush x:Key="BackgroundGreenHover" Color="#009600" />
-                    <SolidColorBrush x:Key="BackgroundGreenDisabled" Color="#075e07" />
+                    <SolidColorBrush x:Key="ButtonForeground" Color="White" />
+                    <SolidColorBrush x:Key="ButtonBackground" Color="#313034" />
+                    <SolidColorBrush x:Key="ButtonBackgroundHover" Color=" #3a3a3e" />
+                    <SolidColorBrush x:Key="ButtonBackgroundDisabled" Color="#1f1e23" />
+                    <SolidColorBrush x:Key="ButtonBackgroundGreen" Color="Green" />
+                    <SolidColorBrush x:Key="ButtonBackgroundGreenHover" Color="#009600" />
+                    <SolidColorBrush x:Key="ButtonBackgroundGreenDisabled" Color="#075e07" />
                 </ResourceDictionary>
             </ResourceDictionary.ThemeDictionaries>
         </ResourceDictionary>
@@ -25,12 +29,17 @@
 
     <!--  Default Button  -->
     <Style Selector="Button">
-        <Setter Property="Foreground" Value="{DynamicResource Foreground}" />
+        <Setter Property="Foreground" Value="{DynamicResource ButtonForeground}" />
+        <Setter Property="Background" Value="{DynamicResource ButtonBackground}" />
         <Setter Property="FontWeight" Value="Bold" />
+    </Style>
+
+    <Style Selector="Button:pointerover /template/ ContentPresenter">
+        <Setter Property="Background" Value="{DynamicResource ButtonBackgroundHover}" />
     </Style>
 
     <!--  Default disabled button  -->
     <Style Selector="Button:disabled">
-        <Setter Property="Background" Value="{DynamicResource BackgroundDisabled}" />
+        <Setter Property="Background" Value="{DynamicResource ButtonBackgroundDisabled}" />
     </Style>
 </Styles>
