--- a/App/Voltflow/Views/Pages/Charging/ChargingView.axaml
+++ b/App/Voltflow/Views/Pages/Charging/ChargingView.axaml
@@ -1,8 +1,19 @@
-<UserControl xmlns="https://github.com/avaloniaui"
-             xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-             xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-             mc:Ignorable="d" d:DesignWidth="800" d:DesignHeight="450"
-             x:Class="Voltflow.Views.Pages.Charging.ChargingView">
-	<Button Command="{Binding Start}">start test webhook connection</Button>
+<UserControl
+    x:Class="Voltflow.Views.Pages.Charging.ChargingView"
+    xmlns="https://github.com/avaloniaui"
+    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+    xmlns:charging="clr-namespace:Voltflow.ViewModels.Pages.Charging"
+    xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+    xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+    d:DesignHeight="450"
+    d:DesignWidth="800"
+    mc:Ignorable="d">
+    <Design.DataContext>
+        <charging:ChargingViewModel />
+    </Design.DataContext>
+
+    <StackPanel HorizontalAlignment="Center" VerticalAlignment="Center">
+        <Button Command="{Binding Start}">Test Webhook</Button>
+        <Button Command="{Binding NavigateHome}">Go Back</Button>
+    </StackPanel>
 </UserControl>
