--- a/App/Voltflow/Views/Pages/Map/SidePanels/StationInformationView.axaml
+++ b/App/Voltflow/Views/Pages/Map/SidePanels/StationInformationView.axaml
@@ -1,15 +1,44 @@
-<UserControl xmlns="https://github.com/avaloniaui"
-             xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-             xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-             mc:Ignorable="d" 
-             x:Class="Voltflow.Views.Pages.Map.SidePanels.StationInformationView">
-	<StackPanel>
-		<TextBlock Text="{Binding ViewTitle}"/>
-		<TextBlock Text="{Binding Status}"/>
-		<Separator/>
-		<TextBlock Text="{Binding Cost}"/>
-		<TextBlock Text="{Binding MaxChargeRate}"/>
-		<Button Command="{Binding Charge}">Charge</Button>
-	</StackPanel>
+<UserControl
+    x:Class="Voltflow.Views.Pages.Map.SidePanels.StationInformationView"
+    xmlns="https://github.com/avaloniaui"
+    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+    xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+    xmlns:iconPacks="https://github.com/MahApps/IconPacks.Avalonia"
+    xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+    xmlns:sidePanels="clr-namespace:Voltflow.ViewModels.Pages.Map.SidePanels"
+    mc:Ignorable="d">
+    <Design.DataContext>
+        <sidePanels:StationInformationViewModel />
+    </Design.DataContext>
+
+    <StackPanel>
+        <TextBlock
+            HorizontalAlignment="Center"
+            Classes="size-sm color-gray weight-bold"
+            Text="{Binding ViewTitle}" />
+
+        <Separator />
+
+        <TextBlock Classes="size-sm color-gray weight-bold" Text="Status" />
+        <TextBox IsEnabled="False" Text="{Binding Status}" />
+
+        <TextBlock Classes="size-sm color-gray weight-bold" Text="Cost" />
+        <TextBox IsEnabled="False" Text="{Binding Cost}" />
+
+        <TextBlock Classes="size-sm color-gray weight-bold" Text="Maximum Charging Rate" />
+        <TextBox IsEnabled="False" Text="{Binding MaxChargeRate}" />
+
+        <Separator />
+
+        <Button
+            HorizontalAlignment="Stretch"
+            Classes="Success"
+            Command="{Binding Charge}"
+            IsEnabled="{Binding Selected}">
+            <StackPanel Orientation="Horizontal">
+                <iconPacks:PackIconBootstrapIcons VerticalAlignment="Center" Kind="LightningChargeFill" />
+                <TextBlock VerticalAlignment="Center" Text="Charge" />
+            </StackPanel>
+        </Button>
+    </StackPanel>
 </UserControl>
